...
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cd_share_quake_button"
        android:visibility="visible"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorPrimaryVariant"
        app:srcCompat="@drawable/round_share_24"
        app:tint="@color/white" />

    <include
        android:id="@+id/overlay"
        layout="@layout/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
