...
        android:id="@+id/iv_iw_mag_color"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        card_view:layout_constraintBottom_toBottomOf="@+id/tv_iw_hour"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="@+id/tv_iw_reference" />

    <TextView
        android:id="@+id/tv_iw_reference"
        android:layout_width="wrap_content"
...
